3822B1FI1/2_gelu_cuda/korobeinikov_arseny/log.txt
/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/korobeinikov_arseny/gelu_cuda.cu(78): error: name followed by "::" must be a class or namespace name
          auto start = std::chrono::high_resolution_clock::now();
                            ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/korobeinikov_arseny/gelu_cuda.cu(80): error: name followed by "::" must be a class or namespace name
          auto end = std::chrono::high_resolution_clock::now();
                          ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/korobeinikov_arseny/gelu_cuda.cu(83): error: name followed by "::" must be a class or namespace name
                    << std::chrono::duration<double>(end - start).count()
                            ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/korobeinikov_arseny/gelu_cuda.cu(83): error: expected an identifier
                    << std::chrono::duration<double>(end - start).count()
                                             ^

/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/korobeinikov_arseny/gelu_cuda.cu(83): error: expected a ";"
                    << std::chrono::duration<double>(end - start).count()
                                             ^

5 errors detected in the compilation of "/home/crazyproger/sandbox/cuda-2025/3822B1FI1/2_gelu_cuda/korobeinikov_arseny/gelu_cuda.cu".
